--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
@@ -80,10 +80,10 @@
                   </h2>
                 </div>
                 <div class="col-xs-6 col-sm-5 col-md-4 col-lg-4 issue text-right">
-                  <span class="cert-titlebar-value">{{cert.grundData.signeringsdatum | date:'shortDate'}}</span>
-                  <span>
+                  <span class="cert-titlebar-value">
                     <span message key="fk7263.label.issued"></span>
                   </span>
+                  <span class="cert-titlebar-value">{{cert.grundData.signeringsdatum | date:'shortDate'}}</span>
                 </div>
               </div>
             </div>
