--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
@@ -61,8 +61,7 @@
           <div message key="ts-diabetes.label.pagedescription.archive"></div>
         </div>
         <br>
-        <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
-                data-toggle="collapse">
+        <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px" data-toggle="collapse">
           <span message key="ts-diabetes.label.status.{{!isCollapsed1}}"></span>
         </button>
 
@@ -106,8 +105,8 @@
                   </h2>
                 </div>
                 <div class="col-xs-6 col-sm-5 col-md-4 col-lg-4 issue text-right">
+                  <span class="cert-titlebar-value"><span message key="ts-diabetes.label.issued"></span></span>
 	                <span class="cert-titlebar-value">{{cert.grundData.signeringsdatum | date:'shortDate'}}</span>
-                  <span><span message key="ts-diabetes.label.issued"></span></span>
                 </div>
               </div>
             </div>
